# pybind-nvcc

./: CMakeLists.txt
